NIFI-15974 Fix PutSmbFile parent folder creation when path contains backslashes
Also get rid of using java.io.File for processing paths as strings because it is platform-dependent. Use string operations instead.